--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.89.0",
   "private": true,
   "engines": {
-    "node": ">=20.15 <=22.12.0",
+    "node": ">=20.15",
     "pnpm": ">=10.2.1"
   },
   "packageManager": "pnpm@10.2.1",
